--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -50,7 +50,7 @@ textarea {
     border-radius: 5px;
     border: 1px solid #ccc;
     font-size: 12px;
-    margin-bottom: 20px;
+    margin-bottom: 24px;
 }
 
 .ngx-datatable .datatable-body .datatable-scroll {
@@ -98,6 +98,7 @@ ion-icon {
 .content-edit {
     position: absolute;
     bottom: 0;
+    right: 0;
 }
 @media only screen and (max-width: 600px) {
     .ngx-datatable .datatable-body .datatable-scroll {
